--- a/config
+++ b/config
@@ -50,8 +50,7 @@ exec_always --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
 
 bindsym $mod+XF86ScreenSaver exec --no-startup-id scrot '%M-%s-%Y-%m-%d_$wx$h.png' -q 100 'mv $f ~/Pictures/scrots' 
 bindsym $mod+XF86Reload exec --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
-bindsym $mod+bracketleft exec --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds 2
-#bindsym $mod+bracketright exec --no-startup-id wicd-curses	
+bindsym $mod+bracketleft exec --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds 2	
 
 ###### OTHER CUSTOM SETTINGS
 
@@ -78,12 +77,8 @@ bindsym $mod+Return exec terminator
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# dmenu bind for only programs w/ desktop applications (no need atm)
+#bindsym $mod+o exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
