--- a/config
+++ b/config
@@ -48,7 +48,7 @@ exec_always --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
 
 ###### KEYBINDINGS
 
-bindsym $mod+XF86ScreenSaver exec --no-startup-id scrot '%M-%s-%Y-%m-%d_$wx$h.png' -q 100 'mv $f ~/Pictures/scrots/' 
+bindsym $mod+XF86ScreenSaver exec --no-startup-id scrot '%H-%M-%s-%Y-%m-%d.png' -q 100 'mv $f ~/Pictures/scrots/' 
 bindsym $mod+XF86Reload exec --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
 bindsym $mod+bracketleft exec --no-startup-id feh --randomize --bg-fill ~/Downloads/bg-other	
 
@@ -190,6 +190,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+#        status_command i3status
+	status_command i3blocks -c ~/Projects/dotfiles/i3bar.conf 
         tray_output primary
 }
