Added basic .vimrc file.

--- a/i3bar.conf
+++ b/i3bar.conf
@@ -104,13 +104,13 @@ min_width=CPU: 100.00%
 label=BAT
 #label=⚡
 #instance=1
-interval=30
+interval=5
 
 # Date Time
 #
 [time]
-command=date '+%H:%M:%S %m-%d-%Y'
-interval=5
+command=date '+%a %b %_d %Y, %l:%M:%S'
+interval=1
 
 # Generic media player support
 #
@@ -132,9 +132,9 @@ interval=5
 # Support multiple chips, though lm-sensors.
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
+[temperature]
+label=TEMP
+interval=10
 
 # Key indicators
 #
