--- a/i3bar.conf
+++ b/i3bar.conf
@@ -73,16 +73,16 @@ interval=30
 #instance=wlan0
 color=#00FF00
 interval=10
-separator=false
+separator=true
 
 [wifi]
 #instance=wlp3s0
 interval=10
 separator=false
 
-[bandwidth]
+#[bandwidth]
 #instance=eth0
-interval=5
+#interval=5
 
 # CPU usage
 #
@@ -90,7 +90,7 @@ interval=5
 # see the script for details.
 [cpu_usage]
 label=CPU
-interval=10
+interval=3
 min_width=CPU: 100.00%
 #separator=false
 
