--- a/i3bar.conf
+++ b/i3bar.conf
@@ -41,6 +41,17 @@ instance=Master
 interval=once
 signal=10
 
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+[mediaplayer]
+#instance=spotify
+interval=1
+#signal=10
+label=♪
+separator=true
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
@@ -111,15 +122,6 @@ interval=5
 [time]
 command=date '+%a %b %_d %Y, %l:%M:%S'
 interval=1
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
 
 # OpenVPN support
 #
