--- a/config
+++ b/config
@@ -21,12 +21,12 @@ font pango:monospace 8
 
 ############################################################################################
 
-###### PERSONAL NOTES
+###### NOTES
 
 # - Use xev to find keycodes for bindings
 # - Connect to Wifi networks from the CLI using wicd-curses, or wicd-gtk from GUI
 # - Use xtightvncviewer to connect to server via VNC, and use cjmarquart.com:1, then
-#   raxemremy's pwd to connect
+#   raxemremy's pwd to connect (to start vnc server on starbelly, tightvncserver -geometry 1920x1080)
 
 ###### STARTUP SETTINGS
 
@@ -45,7 +45,9 @@ exec_always --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
 bindsym $mod+XF86ScreenSaver exec --no-startup-id scrot -q 100 ~/Pictures/scrots/%H-%M-%S-%m-%d-%Y.png 
 bindsym $mod+XF86Reload exec --no-startup-id feh --randomize --bg-fill ~/Downloads/Backgrounds
 bindsym $mod+bracketleft exec --no-startup-id feh --randomize --bg-fill ~/Downloads/bg-other
+#SSH
 bindsym $mod+slash exec --no-startup-id terminator -x bash -c 'ssh raxemremy@cjmarquart.com -p 25'
+bindsym $mod+period exec --no-startup-id terminator -x bash -c 'ssh pi@cjmarquart.com -p 15200'
 
 #media keys
 bindsym $mod+backslash exec --no-startup-id playerctl play
@@ -63,11 +65,18 @@ gaps outer 25
 for_window [class="^.*"] border pixel 0
 
 #enable scratchpad
-#exec_always --no-startup-id terminator --title=dropdown 
-#for_window [instance="dropdown"] floating enable;
-#for_window [instance="dropdown"] move scratchpad; [instance="dropdown"] scratchpad show; move scratchpad
+#exec --no-startup-id terminator -T dropdown -x bash -c "tmux"
+#for_window [instance="dropdown"] floating enable
+#for_window [instance="dropdown"] resize set 625 400
+#for_window [instance="dropdown"] move position center
+#for_window [instance="dropdown"] move scratchpad
 
-#bindsym $mod+u		[instance="dropdown"] scratchpad show
+#bindsym $mod+u [instance="dropdown"] scratchpad show; move position center
+
+#exec_always --no-startup-id "terminator -m"
+#for_window [class="Terminator" title="^((?!Terminator Preferences).)*$"] move scratchpad, move position 0 0, resize set 1366 768;
+#bindsym $mod+u [class="Terminator"] scratchpad show;
+
 
 #start rofi (dmenu replacement)
 bindsym $mod+d exec rofi -show run -opacity "85"
