--- a/thinkpad/i3/config
+++ b/thinkpad/i3/config
@@ -25,8 +25,9 @@ font pango:monospace 8
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
-exec --no-startup-id wicd
-exec --no-startup-id wicd-client
+exec --no-startup-id nm-applet
+#exec --no-startup-id wicd
+#exec --no-startup-id wicd-client
 exec --no-startup-id compton
 exec --no-startup-id xbindkeys_autostart
 exec --no-startup-id xfce4-volumed
