--- a/thinkpad/polybar/config
+++ b/thinkpad/polybar/config
@@ -27,7 +27,7 @@ height = 27
 radius = 6.0
 fixed-center = false
 
-background = ${colors.background}
+background = #992f343f
 foreground = ${colors.foreground}
 
 line-size = 3
@@ -48,7 +48,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = 
-modules-right = filesystem mpd volume memory cpu wlan eth battery temperature date powermenu
+modules-right = filesystem mpd volume memory cpu wlan eth battery battery_internal temperature date powermenu
 
 ;unused but available modules
 ;battery-tlp (permissions issue)
@@ -312,6 +312,35 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
+
+[module/battery_internal]
+type = internal/battery
+battery = BAT0
+adapter = AC
+full-at = 98
+
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
+
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
+
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
+
+
 
 [module/battery]
 type = internal/battery
