Removed tmuxline, fixed statusline.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,17 @@
-# This tmux statusbar config was created by tmuxline.vim
-# on Sun, 20 May 2018
+### abominox's .tmux.conf
 
+# Set new panes to start in your CWD
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
+
+# Set pane adjustment hotkeys
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+# Set custom statusline
 set -g status-justify "left"
 set -g status "on"
 set -g status-attr "none"
@@ -23,6 +34,6 @@ setw -g window-status-activity-fg "colour190"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] %Y-%m-%d | %H:%M #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
+set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] %A %b %d, %Y | %r #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
 setw -g window-status-format "#[fg=colour85,bg=colour234] #I |#[fg=colour85,bg=colour234] #W#F "
 setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I |#[fg=colour255,bg=colour238] #W#F #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
