Changed tmux statusline update interval to 1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
+# Force statusline to update every second
+set-option -s status-interval 1
+
 # Set custom statusline
 set -g status-justify "left"
 set -g status "on"
