--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,6 @@ setw -g window-status-activity-fg "colour190"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] %A %b %d, %Y | %r #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
+set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] %#r | %A %b %d, %Y #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
 setw -g window-status-format "#[fg=colour85,bg=colour234] #I |#[fg=colour85,bg=colour234] #W#F "
 setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I |#[fg=colour255,bg=colour238] #W#F #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
