Change polybar date format, add changes to install.sh to correctly symlink polybar/i3 configs.

--- a/polybar/config
+++ b/polybar/config
@@ -289,7 +289,7 @@ date =
 date-alt = " %Y-%m-%d"
 
 #time = %I:%M:%S
-time = %A, %b %d %r
+time = "%r | %A %b %d, %Y"
 time-alt = %H:%M:%S
 
 format-prefix = 
