Added a bunch of whizbang new tmux binds

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,38 @@
 ### abominox's .tmux.conf
 
-# Set new panes to start in your CWD
-bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
-bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
-bind c new-window -c '#{pane_current_path}' # Create new window
 
-# Set pane adjustment hotkeys
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
+## MISC
 
 # Force statusline to update every second
 set -g status-interval 1
+
+# No delay for escape key
+set -sg escape-time 0
+
+## HOTKEYS
+
+# Set new panes/windows to start in your CWD
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontally
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
+
+# Set pane size adjustment hotkeys (w/ prefix)
+bind < resize-pane -L 5
+bind > resize-pane -R 5
+bind - resize-pane -D 5
+bind + resize-pane -U 5
+
+# Set hotkeys to switch windows (shift+arrow)
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Set hotkeys to switch panes (alt+arrow)
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+## VISUAL
 
 # Set custom statusline
 set -g status-justify "left"
