Remove sudo -E alias

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,4 +61,4 @@ setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounder
 
 # Status Bar
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #(python3 ~/.dotfiles/systat.py) | %#r | %a %b %d, %Y #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
+set -g status-right "#[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #(python3 ~/.dotfiles/scripts/systat.py) | %#r | %a %b %d, %Y #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour190] #h "
