Add line to fix .vimrc inside of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ set -g status-interval 1
 # No delay for escape key
 set -sg escape-time 0
 
+# Set terminal type for Vim compatibility
+set -g default-terminal "screen-256color"
+
 ## HOTKEYS
 
 # Set new panes/windows to start in your CWD
