WSL2 PATH fixes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,17 +35,15 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Enable mouse control (for scrollback)
+set -g mouse on
+
 ## VISUAL
 
 # Set custom statusline
 set -g status-justify "left"
 set -g status "on"
 set -g status-style none 
-#set -g message-command-style bg=color238
-
-
-
-
 set -g status-left-length "100"
 set -g pane-active-border-style fg="colour190"
 set -g status-style bg="colour234"
