--- a/wsl.conf
+++ b/wsl.conf
@@ -2,8 +2,8 @@
 # Deploy to /etc/wsl.conf on WSL2 instances
 
 [interop]
-# Prevent Windows PATH from being injected into Linux PATH
-appendWindowsPath = false
+# Allow Windows PATH to be appended to Linux PATH
+appendWindowsPath = true
 
 [boot]
 # Enable systemd support
