--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ set -g status-interval 1
 # No delay for escape key
 set -sg escape-time 0
 
+# Renumber windows sequentially after closing one
+set -g renumber-windows on
+
 # Set terminal type for Vim compatibility
 set -g default-terminal "screen-256color"
 
